--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,42 +4,74 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg_color"
-tools:context=".WeatherActivity">
+    android:background="@color/colorAccent"
+    tools:context=".WeatherActivity">
 
-    <EditText
+<!--    <EditText-->
+<!--        android:id="@+id/CityName_Input"-->
+<!--        android:layout_width="300dp"-->
+<!--        android:layout_height="65dp"-->
+<!--        android:layout_marginStart="8dp"-->
+<!--        android:layout_marginTop="30dp"-->
+<!--        android:layout_marginEnd="8dp"-->
+<!--        android:backgroundTint="@android:color/white"-->
+<!--        android:textSize="40dp"-->
+<!--        android:ems="8"-->
+<!--        android:inputType="textPersonName"-->
+<!--        android:textAlignment="center"-->
+<!--        android:textColor="#FFFFFF"-->
+<!--        app:layout_constraintBottom_toTopOf="@+id/citytext"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/LOGO"-->
+<!--        tools:text="CITY" />-->
+
+    <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/CityName_Input"
         android:layout_width="300dp"
-        android:layout_height="65dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginEnd="8dp"
-        android:backgroundTint="@android:color/white"
-        android:textSize="40dp"
-        android:ems="8"
-        android:inputType="textPersonName"
-        android:textAlignment="center"
-        android:textColor="#FFFFFF"
-        app:layout_constraintBottom_toTopOf="@+id/citytext"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/LOGO"
-        tools:text="CITY" />
+        android:layout_height="wrap_content"
+        android:hint="Enter name of the city"
+        app:boxBackgroundMode="outline"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        app:helperText="Put name to check the weather"
+        app:endIconMode="clear_text"
+        app:counterEnabled="true"
+        app:counterMaxLength="25"
+        android:layout_marginTop="20dp"
 
-    <TextView
-        android:id="@+id/citytext"
-        android:layout_width="300dp"
-        android:layout_height="20dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:text="Name of the city"
-        android:shadowDx="2"
-        android:shadowDy="2"
-
-        android:textAlignment="center"
         app:layout_constraintBottom_toTopOf="@+id/BTN1"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/LOGO">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/CityName_Input2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@android:color/white"
+            android:textColorHint="@android:color/white"
+            android:textColorLink="@android:color/white"
+            android:textSize="20sp"
+            />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+
+
+<!--    <TextView-->
+<!--        android:id="@+id/citytext"-->
+<!--        android:layout_width="300dp"-->
+<!--        android:layout_height="20dp"-->
+<!--        android:layout_marginStart="8dp"-->
+<!--        android:layout_marginEnd="8dp"-->
+<!--        android:text="Name of the city"-->
+<!--        android:shadowDx="2"-->
+<!--        android:shadowDy="2"-->
+
+<!--        android:textAlignment="center"-->
+<!--        app:layout_constraintBottom_toTopOf="@+id/BTN1"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent" />-->
 
     <Button
         android:id="@+id/BTN1"
@@ -52,7 +84,7 @@ tools:context=".WeatherActivity">
         android:background="@drawable/btn_background"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/citytext" />
+        app:layout_constraintTop_toBottomOf="@+id/CityName_Input" />
 
     <ImageView
         android:id="@+id/LOGO"
